[gd_scene load_steps=8 format=3 uid="uid://bayvs65mc7p6a"]

[ext_resource type="Script" uid="uid://ddoaqynwy4xru" path="res://scenes/player/player.gd" id="1_8afob"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8afob"]
radius = 0.4
height = 1.7

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dovo2"]
radius = 0.4
height = 1.7

[sub_resource type="TorusMesh" id="TorusMesh_dovo2"]
inner_radius = 2.0
outer_radius = 1.5

[sub_resource type="BoxMesh" id="BoxMesh_8afob"]

[sub_resource type="PrismMesh" id="PrismMesh_dovo2"]

[sub_resource type="ViewportTexture" id="ViewportTexture_8afob"]
viewport_path = NodePath("GUI/SubViewport")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_8afob")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_8afob")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_dovo2")

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5123661, -0.33297223)
cull_mask = 1

[node name="CollisionRaycast" type="RayCast3D" parent="."]
transform = Transform3D(-30, -2.2649371e-07, -1.9800708e-13, 0, -6.556708e-08, 30, -4.529874e-06, 1.5, 1.3113416e-06, 0, 0, 0)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="MovementRaycast" type="RayCast3D" parent="."]
transform = Transform3D(-30, -2.2649371e-07, -1.9800708e-13, 0, -6.556708e-08, 30, -4.529874e-06, 1.5, 1.3113416e-06, 0, 0, 0)
hit_from_inside = true
collide_with_areas = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="SubViewport" type="SubViewport" parent="GUI"]
own_world_3d = true
transparent_bg = true

[node name="Donnut" type="MeshInstance3D" parent="GUI/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6050831, 0)
layers = 2
mesh = SubResource("TorusMesh_dovo2")

[node name="RotationIndicator" type="Node3D" parent="GUI/SubViewport"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Cube" type="MeshInstance3D" parent="GUI/SubViewport/RotationIndicator"]
layers = 2
mesh = SubResource("BoxMesh_8afob")

[node name="Pyramid" type="MeshInstance3D" parent="GUI/SubViewport/RotationIndicator"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0.9789283)
layers = 2
mesh = SubResource("PrismMesh_dovo2")

[node name="Camera3D" type="Camera3D" parent="GUI/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.5654087)
cull_mask = 2

[node name="TextureRect" type="TextureRect" parent="GUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -512.0
offset_bottom = 512.0
grow_horizontal = 0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(512.22266, 0)
texture = SubResource("ViewportTexture_8afob")
